[metadata]
name = xacker
version = attr: xacker.__version__
description = xacker: A quick, easy and flexible development environment creator using Docker.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/xames3/xacker/
author = Akshay Mestry (XAMES3)
author_email = xa@mes3.dev
license = MIT
license_file = LICENSE
platforms = osx
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Documentation :: Sphinx
    Topic :: Software Development
    Topic :: Terminals
    Topic :: Text Editors :: Integrated Development Environments (IDE)
    Topic :: Text Processing :: Markup :: reStructuredText
    Topic :: Utilities
keywords = xacker, docker, python
project_urls =
    Changelog = https://github.com/xames3/xacker
    Source = https://github.com/xames3/xacker
    Tracker = https://github.com/xames3/xacker/issues

[options]
packages = find:
include_package_data = true
python_requires = >= 3.6
zip_safe = no

[options.entry_points]
console_scripts =
    xacker = xacker.main:main

[mypy]
mypy_path = xacker
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
